--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,11 @@ logging.level.org.hibernate.stat=debug
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
+#Hibernate Second level cache
+#1. Enable caching
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+#2. Specify cache framework
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.internal.EhcacheRegionFactory
+#3. Configure cache strategy
+spring.jpa.properties.javax.persistence.sharedCache.mode=ENABLE_SELECTIVE
+logging.level.net.sf.ehcache=debug
